# MathGenericProg

./: .gitmodules  CMakeLists.txt  README.md
Common/: eulers_totient_function.h  greatest_common_divisor.h  prime_factors_of_a_number.h  timer.h
GeeksForGeeks/: CMakeLists.txt  eulers_totient_function.cpp  greatest_common_divisor.cpp  prime_factors_of_a_number.cpp  prime_number.cpp  prime_number.h
LeetCode/: 001.cpp  CMakeLists.txt  process.h  timer.h
Test/: CMakeLists.txt  bignum.cpp
lib/: CMakeLists.txt
lib/inc/bignum/: bignum.h
rsa/: CMakeLists.txt  main.cpp
